--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -39,6 +39,8 @@
   <meta name="theme-color" content="#157878">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+  <link rel="shortcut icon" type="image/x-icon" href="https://static.wikia.nocookie.net/mlp/images/4/4a/Site-favicon.ico/revision/latest?cb=20210531205122">
+
   {% include head-custom.html %}
 </head>
 
