--- a/src/css/loading.css
+++ b/src/css/loading.css
@@ -12,10 +12,15 @@
     align-items: center;
 }
 #loading{
-    background-color: rgba(255, 255,255, 0);
+    background-color: rgba(255, 255,255, 0.5);
     opacity: 1;
+    border-radius:10%
 }
 #loadingout #loading h1{
+    vertical-align: middle;
+    color: rgba(0, 0,0, 0.6);
+}
+#loadingout #loading h2{
     vertical-align: middle;
     color: rgba(0, 0,0, 0.6);
 }
