--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -98,6 +98,7 @@ setInterval(function(){ countdown(); },1000);
 </script> -->
 
       <footer class="site-footer">
+        {% include disclaimer.html %}
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
         {% endif %}
